--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+
+#window{
+  margin-top: 50px;
+  background-color: #1a1a1b;
+  color: #fff;
+  padding: 15px;
+  border-radius: 20px;
+  box-shadow: 0 0 5px black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.swapbox_select {
+  width: 50%;
+  float: left;
+  margin-top: 50px;
+  background-color: #1a1a1b;
   color: white;
+  padding: 15px;
+  border-radius: 20px
 }
 
-.App-link {
-  color: #61dafb;
+.swapbox {
+  overflow: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+/* practice - Flexbox CSS in 20 minutes
+https://youtu.be/JJSoEo8JSnc
+ */
+
+ @media (min-width: 768px) {
+   
+  .container-1{
+    display: flex;
+    /*
+    align-items: flex-stretch;
+    align-items: flex-start;
+    align-items: flex-end;
+    align-items: flex-center;
+  
+    flex-direction: column;
+    */
+    
   }
-  to {
-    transform: rotate(360deg);
+  
+  .container-2{
+    display: flex;
+    /*
+    justify-content: flex-start;
+    justify-content: flex-end;
+    justify-content: center;
+    justify-content: space-around;
+    */
+    justify-content: space-between;   
   }
+ }
+
+ .container-3{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;  
+ }
+
+
+
+.container-1 div, .container-2 div, .container-3 div{
+  border: 1px #fff solid;
+  padding: 10px;
 }
+
+.box-1{
+  flex: 2;
+  order: 2;
+}
+
+.box-2{
+  flex: 1;
+  order: 1;
+  
+}
+
+.box-3{
+  flex: 1;
+  order: 3;
+  
+}
+
+.container-2-box{
+  /*
+  width: 30%;
+  */
+  flex-basis: 30%;
+}
+
+.container-3-box{
+  flex-basis: 10%;
+}
+
+
+
