--- a/src/App.css
+++ b/src/App.css
@@ -55,45 +55,24 @@ https://youtu.be/JJSoEo8JSnc
   }
  }
 
- .container-3{
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-between;  
- }
-
-
-
-.container-1 div, .container-2 div, .container-3 div{
+.container-1 div, .container-2 div{
   border: 1px #fff solid;
   padding: 10px;
 }
 
 .box-1{
-  flex: 2;
+  flex: 1;
+  /*
   order: 2;
+  */
 }
 
 .box-2{
   flex: 1;
-  order: 1;
-  
-}
-
-.box-3{
-  flex: 1;
-  order: 3;
-  
-}
-
-.container-2-box{
   /*
-  width: 30%;
+  order: 1;
   */
-  flex-basis: 30%;
-}
-
-.container-3-box{
-  flex-basis: 10%;
+  
 }
 
 
