--- a/src/App.css
+++ b/src/App.css
@@ -53,9 +53,33 @@ https://youtu.be/JJSoEo8JSnc
     */
     justify-content: space-between;   
   }
+
+  .container-3{
+    display: flex;
+    /*
+    justify-content: flex-start;
+    justify-content: flex-end;
+    justify-content: center;
+    justify-content: space-around;
+    */
+    justify-content: space-between;   
+  }
+
+  .container-4{
+    display: flex;
+    /*
+    justify-content: flex-start;
+    justify-content: flex-end;
+    justify-content: center;
+    justify-content: space-around;
+    */
+    justify-content: space-between;   
+  }
  }
 
-.container-1 div, .container-2 div{
+ 
+
+.container-1 div, .container-2 div, .container-3 div{
   /*
   border: 1px rgb(55, 53, 53) solid;
   */
