--- a/src/App.css
+++ b/src/App.css
@@ -86,15 +86,26 @@ https://youtu.be/JJSoEo8JSnc
     */
     justify-content: space-between;   
   }
+
+  .container-6{
+    display: flex;
+    /*
+    justify-content: flex-start;
+    justify-content: flex-end;
+    justify-content: center;
+    justify-content: space-around;
+    */
+    justify-content: space-between;   
+  }
  }
 
- 
 
 .container-1 div, 
 .container-2 div, 
 .container-3 div,
 .container-4 div,
-.container-5 div{
+.container-5 div,
+.container-6 div{
   /*
   border: 1px rgb(55, 53, 53) solid;
   */
@@ -128,8 +139,21 @@ https://youtu.be/JJSoEo8JSnc
   flex: 1;
   /*
   order: 1;
-  */
-  
+  */ 
+}
+
+.box-sell{
+  flex: 1;
+  /*
+  order: 1;
+  */ 
+}
+
+.box-buy{
+  flex: 1;
+  /*
+  order: 1;
+  */ 
 }
 
 
