--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,7 @@ https://youtu.be/JJSoEo8JSnc
   */ 
 }
 
-/* tabs */
+/* ======= TABS ========= */
 
 .container {
   display: flex;
@@ -173,6 +173,7 @@ https://youtu.be/JJSoEo8JSnc
   text-align: center;
   width: 50%;
   background: rgba(128, 128, 128, 0.075);
+  color: #86868a;
   cursor: pointer;
   border-bottom: 1px solid rgba(0, 0, 0, 0.274);
   box-sizing: content-box;
@@ -185,7 +186,7 @@ https://youtu.be/JJSoEo8JSnc
 
 .active-tabs  {
   background: #1d1f21;
-  color: #636366;
+  color: #beccda;
   border-bottom: 1px solid transparent;
 }
 
