--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 
+/* uniswap styling - start */
 #window{
   margin-top: 50px;
   background-color: #1a1a1b;
@@ -23,6 +24,7 @@
 }
 
 
+/* DEX and token contract styling */
 
 /* practice - Flexbox CSS in 20 minutes
 https://youtu.be/JJSoEo8JSnc
